# copy_paste_detector

./: CMakeLists.txt  README.md
include/: resource.hpp
src/: resource.cpp
tests/: CMakeLists.txt
